--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
+    "@vueuse/motion": "^2.0.0-beta.12",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "vue": "^3.2.41"
